antlr/SysYParser.cpp

// Generated from SysY.g4 by ANTLR 4.12.0

#include "SysYParser.h"

#include "SysYVisitor.h"

using namespace antlrcpp;

using namespace antlr4;

namespace {

struct SysYParserStaticData final {
    SysYParserStaticData(std::vector<std::string> ruleNames, std::vector<std::string> literalNames,
                         std::vector<std::string> symbolicNames)
        : ruleNames(std::move(ruleNames)),
          literalNames(std::move(literalNames)),
          symbolicNames(std::move(symbolicNames)),
          vocabulary(this->literalNames, this->symbolicNames) {}

    SysYParserStaticData(const SysYParserStaticData &) = delete;
    SysYParserStaticData(SysYParserStaticData &&) = delete;
    SysYParserStaticData &operator=(const SysYParserStaticData &) = delete;
    SysYParserStaticData &operator=(SysYParserStaticData &&) = delete;

    std::vector<antlr4::dfa::DFA> decisionToDFA;
    antlr4::atn::PredictionContextCache sharedContextCache;
    const std::vector<std::string> ruleNames;
    const std::vector<std::string> literalNames;
    const std::vector<std::string> symbolicNames;
    const antlr4::dfa::Vocabulary vocabulary;
    antlr4::atn::SerializedATNView serializedATN;
    std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag sysyParserOnceFlag;
SysYParserStaticData *sysyParserStaticData = nullptr;

void sysyParserInitialize() {
    assert(sysyParserStaticData == nullptr);
    auto staticData = std::make_unique<SysYParserStaticData>(
        std::vector<std::string>{"compilationUnit",
                                 "translationUnit",
                                 "externalDeclaration",
                                 "decl",
                                 "constDecl",
                                 "bType",
                                 "constDef",
                                 "constInitVal",
                                 "varDecl",
                                 "varDef",
                                 "initVal",
                                 "funcDef",
                                 "funcType",
                                 "funcFParams",
                                 "funcFParam",
                                 "block",
                                 "blockItemList",
                                 "blockItem",
                                 "stmt",
                                 "assignStmt",
                                 "assignOp",
                                 "expStmt",
                                 "blockStmt",
                                 "seleStmt",
                                 "loopStmt",
                                 "jumpStmt",
                                 "exp",
                                 "constExp",
                                 "lVal",
                                 "primaryExp",
                                 "number",
                                 "funcRParams",
                                 "funcRParam",
                                 "unaryExp",
                                 "unaryOp",
                                 "mulExp",
                                 "mulOp",
                                 "addExp",
                                 "addOp",
                                 "relExp",
                                 "relOp",
                                 "eqExp",
                                 "eqOp",
                                 "lAndExp",
                                 "lOrExp",
                                 "condExp"},
        std::vector<std::string>{"",        "'float'",    "'='",      "'*='", "'/='",   "'%='",    "'+='",  "'-='",
                                 "'<<='",   "'>>='",      "'&='",     "'^='", "'|='",   "'&'",     "'~'",   "'int'",
                                 "'void'",  "'const'",    "'return'", "'if'", "'else'", "'while'", "'for'", "'do'",
                                 "'break'", "'continue'", "'('",      "')'",  "'['",    "']'",     "'{'",   "'}'",
                                 "','",     "';'",        "'-'",      "'+'",  "'!'",    "'*'",     "'/'",   "'%'",
                                 "'&&'",    "'||'",       "'=='",     "'!='", "'<'",    "'<='",    "'>'",   "'>='"},
        std::vector<std::string>{"",
                                 "",
                                 "",
                                 "",
                                 "",
                                 "",
                                 "",
                                 "",
                                 "",
                                 "",
                                 "",
                                 "",
                                 "",
                                 "",
                                 "",
                                 "Int",
                                 "Void",
                                 "Const",
                                 "Return",
                                 "If",
                                 "Else",
                                 "While",
                                 "For",
                                 "Do",
                                 "Break",
                                 "Continue",
                                 "Lparen",
                                 "Rparen",
                                 "Lbrkt",
                                 "Rbrkt",
                                 "Lbrace",
                                 "Rbrace",
                                 "Comma",
                                 "Semicolon",
                                 "Minus",
                                 "Addition",
                                 "Exclamation",
                                 "Multiplication",
                                 "Division",
                                 "Modulo",
                                 "LAND",
                                 "LOR",
                                 "EQ",
                                 "NEQ",
                                 "LT",
                                 "LE",
                                 "GT",
                                 "GE",
                                 "IntLiteral",
                                 "FloatLiteral",
                                 "Identifier",
                                 "Whitespace",
                                 "Newline",
                                 "BlockComment",
                                 "LineComment"});
    staticData->serializedATN = antlr4::atn::SerializedATNView(
        serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

    antlr4::atn::ATNDeserializer deserializer;
    staticData->atn = deserializer.deserialize(staticData->serializedATN);

    const size_t count = staticData->atn->getNumberOfDecisions();
    staticData->decisionToDFA.reserve(count);
    for (size_t i = 0; i < count; i++) {
        staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
    }
    sysyParserStaticData = staticData.release();
}

}  // namespace

SysYParser::SysYParser(TokenStream *input) : SysYParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

SysYParser::SysYParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
    SysYParser::initialize();
    _interpreter = new atn::ParserATNSimulator(this, *sysyParserStaticData->atn, sysyParserStaticData->decisionToDFA,
                                               sysyParserStaticData->sharedContextCache, options);
}

SysYParser::~SysYParser() { delete _interpreter; }

const atn::ATN &SysYParser::getATN() const { return *sysyParserStaticData->atn; }

std::string SysYParser::getGrammarFileName() const { return "SysY.g4"; }

const std::vector<std::string> &SysYParser::getRuleNames() const { return sysyParserStaticData->ruleNames; }

const dfa::Vocabulary &SysYParser::getVocabulary() const { return sysyParserStaticData->vocabulary; }

antlr4::atn::SerializedATNView SysYParser::getSerializedATN() const { return sysyParserStaticData->serializedATN; }

//----------------- CompilationUnitContext ------------------------------------------------------------------

SysYParser::CompilationUnitContext::CompilationUnitContext(ParserRuleContext *parent, size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

tree::TerminalNode *SysYParser::CompilationUnitContext::EOF() { return getToken(SysYParser::EOF, 0); }

SysYParser::TranslationUnitContext *SysYParser::CompilationUnitContext::translationUnit() {
    return getRuleContext<SysYParser::TranslationUnitContext>(0);
}

size_t SysYParser::CompilationUnitContext::getRuleIndex() const { return SysYParser::RuleCompilationUnit; }

std::any SysYParser::CompilationUnitContext::accept(tree::ParseTreeVisitor *visitor) {
    if (auto parserVisitor = dynamic_cast<SysYVisitor *>(visitor))
        return parserVisitor->visitCompilationUnit(this);
    else
        return visitor->visitChildren(this);
}

SysYParser::CompilationUnitContext *SysYParser::compilationUnit() {
    CompilationUnitContext *_localctx = _tracker.createInstance<CompilationUnitContext>(_ctx, getState());
    enterRule(_localctx, 0, SysYParser::RuleCompilationUnit);
    size_t _la = 0;

#if __cplusplus > 201703L
    auto onExit = finally([=, this] {
#else
    auto onExit = finally([=] {
#endif
        exitRule();
    });
    try {
        enterOuterAlt(_localctx, 1);
        setState(93);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if ((((_la & ~0x3fULL) == 0) && ((1ULL << _la) & 8590163970) != 0)) {
            setState(92);
            translationUnit();
        }
        setState(95);
        match(SysYParser::EOF);

    } catch (RecognitionException &e) {
        _errHandler->reportError(this, e);
        _localctx->exception = std::current_exception();
        _errHandler->recover(this, _localctx->exception);
    }

    return _localctx;
}

//----------------- TranslationUnitContext ------------------------------------------------------------------

SysYParser::TranslationUnitContext::TranslationUnitContext(ParserRuleContext *parent, size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

std::vector<SysYParser::ExternalDeclarationContext *> SysYParser::TranslationUnitContext::externalDeclaration() {
    return getRuleContexts<SysYParser::ExternalDeclarationContext>();
}

SysYParser::ExternalDeclarationContext *SysYParser::TranslationUnitContext::externalDeclaration(size_t i) {
    return getRuleContext<SysYParser::ExternalDeclarationContext>(i);
}

size_t SysYParser::TranslationUnitContext::getRuleIndex() const { return SysYParser::RuleTranslationUnit; }

std::any SysYParser::TranslationUnitContext::accept(tree::ParseTreeVisitor *visitor) {
    if (auto parserVisitor = dynamic_cast<SysYVisitor *>(visitor))
        return parserVisitor->visitTranslationUnit(this);
    else
        return visitor->visitChildren(this);
}

SysYParser::TranslationUnitContext *SysYParser::translationUnit() {
    TranslationUnitContext *_localctx = _tracker.createInstance<TranslationUnitContext>(_ctx, getState());
    enterRule(_localctx, 2, SysYParser::RuleTranslationUnit);
    size_t _la = 0;

#if __cplusplus > 201703L
    auto onExit = finally([=, this] {
#else
    auto onExit = finally([=] {
#endif
        exitRule();
    });
    try {
        enterOuterAlt(_localctx, 1);
        setState(98);
        _errHandler->sync(this);
        _la = _input->LA(1);
        do {
            setState(97);
            externalDeclaration();
            setState(100);
            _errHandler->sync(this);
            _la = _input->LA(1);
        } while ((((_la & ~0x3fULL) == 0) && ((1ULL << _la) & 8590163970) != 0));

    } catch (RecognitionException &e) {
        _errHandler->reportError(this, e);
        _localctx->exception = std::current_exception();
        _errHandler->recover(this, _localctx->exception);
    }

    return _localctx;
}

//----------------- ExternalDeclarationContext ------------------------------------------------------------------

SysYParser::ExternalDeclarationContext::ExternalDeclarationContext(ParserRuleContext *parent, size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

SysYParser::DeclContext *SysYParser::ExternalDeclarationContext::decl() {
    return getRuleContext<SysYParser::DeclContext>(0);
}

SysYParser::FuncDefContext *SysYParser::ExternalDeclarationContext::funcDef() {
    return getRuleContext<SysYParser::FuncDefContext>(0);
}

tree::TerminalNode *SysYParser::ExternalDeclarationContext::Semicolon() { return getToken(SysYParser::Semicolon, 0); }

size_t SysYParser::ExternalDeclarationContext::getRuleIndex() const { return SysYParser::RuleExternalDeclaration; }

std::any SysYParser::ExternalDeclarationContext::accept(tree::ParseTreeVisitor *visitor) {
    if (auto parserVisitor = dynamic_cast<SysYVisitor *>(visitor))
        return parserVisitor->visitExternalDeclaration(this);
    else
        return visitor->visitChildren(this);
}

SysYParser::ExternalDeclarationContext *SysYParser::externalDeclaration() {
    ExternalDeclarationContext *_localctx = _tracker.createInstance<ExternalDeclarationContext>(_ctx, getState());
    enterRule(_localctx, 4, SysYParser::RuleExternalDeclaration);

#if __cplusplus > 201703L
    auto onExit = finally([=, this] {
#else
    auto onExit = finally([=] {
#endif
        exitRule();
    });
    try {
        setState(105);
        _errHandler->sync(this);
        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx)) {
            case 1: {
                enterOuterAlt(_localctx, 1);
                setState(102);
                decl();
                break;
            }

            case 2: {
                enterOuterAlt(_localctx, 2);
                setState(103);
                funcDef();
                break;
            }

            case 3: {
                enterOuterAlt(_localctx, 3);
                setState(104);
                match(SysYParser::Semicolon);
                break;
            }

            default:
                break;
        }

    } catch (RecognitionException &e) {
        _errHandler->reportError(this, e);
        _localctx->exception = std::current_exception();
        _errHandler->recover(this, _localctx->exception);
    }

    return _localctx;
}

//----------------- DeclContext ------------------------------------------------------------------

SysYParser::DeclContext::DeclContext(ParserRuleContext *parent, size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

SysYParser::ConstDeclContext *SysYParser::DeclContext::constDecl() {
    return getRuleContext<SysYParser::ConstDeclContext>(0);
}

SysYParser::VarDeclContext *SysYParser::DeclContext::varDecl() { return getRuleContext<SysYParser::VarDeclContext>(0); }

size_t SysYParser::DeclContext::getRuleIndex() const { return SysYParser::RuleDecl; }

std::any SysYParser::DeclContext::accept(tree::ParseTreeVisitor *visitor) {
    if (auto parserVisitor = dynamic_cast<SysYVisitor *>(visitor))
        return parserVisitor->visitDecl(this);
    else
        return visitor->visitChildren(this);
}

SysYParser::DeclContext *SysYParser::decl() {
    DeclContext *_localctx = _tracker.createInstance<DeclContext>(_ctx, getState());
    enterRule(_localctx, 6, SysYParser::RuleDecl);

#if __cplusplus > 201703L
    auto onExit = finally([=, this] {
#else
    auto onExit = finally([=] {
#endif
        exitRule();
    });
    try {
        setState(109);
        _errHandler->sync(this);
        switch (_input->LA(1)) {
            case SysYParser::Const: {
                enterOuterAlt(_localctx, 1);
                setState(107);
                constDecl();
                break;
            }

            case SysYParser::T__0:
            case SysYParser::Int: {
                enterOuterAlt(_localctx, 2);
                setState(108);
                varDecl();
                break;
            }

            default:
                throw NoViableAltException(this);
        }

    } catch (RecognitionException &e) {
        _errHandler->reportError(this, e);
        _localctx->exception = std::current_exception();
        _errHandler->recover(this, _localctx->exception);
    }

    return _localctx;
}

//----------------- ConstDeclContext ------------------------------------------------------------------

SysYParser::ConstDeclContext::ConstDeclContext(ParserRuleContext *parent, size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

tree::TerminalNode *SysYParser::ConstDeclContext::Const() { return getToken(SysYParser::Const, 0); }

SysYParser::BTypeContext *SysYParser::ConstDeclContext::bType() { return getRuleContext<SysYParser::BTypeContext>(0); }

std::vector<SysYParser::ConstDefContext *> SysYParser::ConstDeclContext::constDef() {
    return getRuleContexts<SysYParser::ConstDefContext>();
}

SysYParser::ConstDefContext *SysYParser::ConstDeclContext::constDef(size_t i) {
    return getRuleContext<SysYParser::ConstDefContext>(i);
}

tree::TerminalNode *SysYParser::ConstDeclContext::Semicolon() { return getToken(SysYParser::Semicolon, 0); }

std::vector<tree::TerminalNode *> SysYParser::ConstDeclContext::Comma() { return getTokens(SysYParser::Comma); }

tree::TerminalNode *SysYParser::ConstDeclContext::Comma(size_t i) { return getToken(SysYParser::Comma, i); }

size_t SysYParser::ConstDeclContext::getRuleIndex() const { return SysYParser::RuleConstDecl; }

std::any SysYParser::ConstDeclContext::accept(tree::ParseTreeVisitor *visitor) {
    if (auto parserVisitor = dynamic_cast<SysYVisitor *>(visitor))
        return parserVisitor->visitConstDecl(this);
    else
        return visitor->visitChildren(this);
}

SysYParser::ConstDeclContext *SysYParser::constDecl() {
    ConstDeclContext *_localctx = _tracker.createInstance<ConstDeclContext>(_ctx, getState());
    enterRule(_localctx, 8, SysYParser::RuleConstDecl);
    size_t _la = 0;

#if __cplusplus > 201703L
    auto onExit = finally([=, this] {
#else
    auto onExit = finally([=] {
#endif
        exitRule();
    });
    try {
        enterOuterAlt(_localctx, 1);
        setState(111);
        match(SysYParser::Const);
        setState(112);
        bType();
        setState(113);
        constDef();
        setState(118);
        _errHandler->sync(this);
        _la = _input->LA(1);
        while (_la == SysYParser::Comma) {
            setState(114);
            match(SysYParser::Comma);
            setState(115);
            constDef();
            setState(120);
            _errHandler->sync(this);
            _la = _input->LA(1);
        }
        setState(121);
        match(SysYParser::Semicolon);

    } catch (RecognitionException &e) {
        _errHandler->reportError(this, e);
        _localctx->exception = std::current_exception();
        _errHandler->recover(this, _localctx->exception);
    }

    return _localctx;
}

//----------------- BTypeContext ------------------------------------------------------------------

SysYParser::BTypeContext::BTypeContext(ParserRuleContext *parent, size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

tree::TerminalNode *SysYParser::BTypeContext::Int() { return getToken(SysYParser::Int, 0); }

size_t SysYParser::BTypeContext::getRuleIndex() const { return SysYParser::RuleBType; }

std::any SysYParser::BTypeContext::accept(tree::ParseTreeVisitor *visitor) {
    if (auto parserVisitor = dynamic_cast<SysYVisitor *>(visitor))
        return parserVisitor->visitBType(this);
    else
        return visitor->visitChildren(this);
}

SysYParser::BTypeContext *SysYParser::bType() {
    BTypeContext *_localctx = _tracker.createInstance<BTypeContext>(_ctx, getState());
    enterRule(_localctx, 10, SysYParser::RuleBType);
    size_t _la = 0;

#if __cplusplus > 201703L
    auto onExit = finally([=, this] {
#else
    auto onExit = finally([=] {
#endif
        exitRule();
    });
    try {
        enterOuterAlt(_localctx, 1);
        setState(123);
        _la = _input->LA(1);
        if (!(_la == SysYParser::T__0

              || _la == SysYParser::Int)) {
            _errHandler->recoverInline(this);
        } else {
            _errHandler->reportMatch(this);
            consume();
        }

    } catch (RecognitionException &e) {
        _errHandler->reportError(this, e);
        _localctx->exception = std::current_exception();
        _errHandler->recover(this, _localctx->exception);
    }

    return _localctx;
}

//----------------- ConstDefContext ------------------------------------------------------------------

SysYParser::ConstDefContext::ConstDefContext(ParserRuleContext *parent, size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

tree::TerminalNode *SysYParser::ConstDefContext::Identifier() { return getToken(SysYParser::Identifier, 0); }

SysYParser::ConstInitValContext *SysYParser::ConstDefContext::constInitVal() {
    return getRuleContext<SysYParser::ConstInitValContext>(0);
}

std::vector<tree::TerminalNode *> SysYParser::ConstDefContext::Lbrkt() { return getTokens(SysYParser::Lbrkt); }

tree::TerminalNode *SysYParser::ConstDefContext::Lbrkt(size_t i) { return getToken(SysYParser::Lbrkt, i); }

std::vector<SysYParser::ConstExpContext *> SysYParser::ConstDefContext::constExp() {
    return getRuleContexts<SysYParser::ConstExpContext>();
}

SysYParser::ConstExpContext *SysYParser::ConstDefContext::constExp(size_t i) {
    return getRuleContext<SysYParser::ConstExpContext>(i);
}

std::vector<tree::TerminalNode *> SysYParser::ConstDefContext::Rbrkt() { return getTokens(SysYParser::Rbrkt); }

tree::TerminalNode *SysYParser::ConstDefContext::Rbrkt(size_t i) { return getToken(SysYParser::Rbrkt, i); }

size_t SysYParser::ConstDefContext::getRuleIndex() const { return SysYParser::RuleConstDef; }

std::any SysYParser::ConstDefContext::accept(tree::ParseTreeVisitor *visitor) {
    if (auto parserVisitor = dynamic_cast<SysYVisitor *>(visitor))
        return parserVisitor->visitConstDef(this);
    else
        return visitor->visitChildren(this);
}

SysYParser::ConstDefContext *SysYParser::constDef() {
    ConstDefContext *_localctx = _tracker.createInstance<ConstDefContext>(_ctx, getState());
    enterRule(_localctx, 12, SysYParser::RuleConstDef);
    size_t _la = 0;

#if __cplusplus > 201703L
    auto onExit = finally([=, this] {
#else
    auto onExit = finally([=] {
#endif
        exitRule();
    });
    try {
        enterOuterAlt(_localctx, 1);
        setState(125);
        match(SysYParser::Identifier);
        setState(132);
        _errHandler->sync(this);
        _la = _input->LA(1);
        while (_la == SysYParser::Lbrkt) {
            setState(126);
            match(SysYParser::Lbrkt);
            setState(127);
            constExp();
            setState(128);
            match(SysYParser::Rbrkt);
            setState(134);
            _errHandler->sync(this);
            _la = _input->LA(1);
        }
        setState(135);
        match(SysYParser::T__1);
        setState(136);
        constInitVal();

    } catch (RecognitionException &e) {
        _errHandler->reportError(this, e);
        _localctx->exception = std::current_exception();
        _errHandler->recover(this, _localctx->exception);
    }

    return _localctx;
}

//----------------- ConstInitValContext ------------------------------------------------------------------

SysYParser::ConstInitValContext::ConstInitValContext(ParserRuleContext *parent, size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

size_t SysYParser::ConstInitValContext::getRuleIndex() const { return SysYParser::RuleConstInitVal; }

void SysYParser::ConstInitValContext::copyFrom(ConstInitValContext *ctx) { ParserRuleContext::copyFrom(ctx); }

//----------------- ListConstInitValContext ------------------------------------------------------------------

tree::TerminalNode *SysYParser::ListConstInitValContext::Lbrace() { return getToken(SysYParser::Lbrace, 0); }

tree::TerminalNode *SysYParser::ListConstInitValContext::Rbrace() { return getToken(SysYParser::Rbrace, 0); }

std::vector<SysYParser::ConstInitValContext *> SysYParser::ListConstInitValContext::constInitVal() {
    return getRuleContexts<SysYParser::ConstInitValContext>();
}

SysYParser::ConstInitValContext *SysYParser::ListConstInitValContext::constInitVal(size_t i) {
    return getRuleContext<SysYParser::ConstInitValContext>(i);
}

std::vector<tree::TerminalNode *> SysYParser::ListConstInitValContext::Comma() { return getTokens(SysYParser::Comma); }

tree::TerminalNode *SysYParser::ListConstInitValContext::Comma(size_t i) { return getToken(SysYParser::Comma, i); }

SysYParser::ListConstInitValContext::ListConstInitValContext(ConstInitValContext *ctx) { copyFrom(ctx); }

std::any SysYParser::ListConstInitValContext::accept(tree::ParseTreeVisitor *visitor) {
    if (auto parserVisitor = dynamic_cast<SysYVisitor *>(visitor))
        return parserVisitor->visitListConstInitVal(this);
    else
        return visitor->visitChildren(this);
}
//----------------- ScalarConstInitValContext ------------------------------------------------------------------

SysYParser::ConstExpContext *SysYParser::ScalarConstInitValContext::constExp() {
    return getRuleContext<SysYParser::ConstExpContext>(0);
}

SysYParser::ScalarConstInitValContext::ScalarConstInitValContext(ConstInitValContext *ctx) { copyFrom(ctx); }

std::any SysYParser::ScalarConstInitValContext::accept(tree::ParseTreeVisitor *visitor) {
    if (auto parserVisitor = dynamic_cast<SysYVisitor *>(visitor))
        return parserVisitor->visitScalarConstInitVal(this);
    else
        return visitor->visitChildren(this);
}
SysYParser::ConstInitValContext *SysYParser::constInitVal() {
    ConstInitValContext *_localctx = _tracker.createInstance<ConstInitValContext>(_ctx, getState());
    enterRule(_localctx, 14, SysYParser::RuleConstInitVal);
    size_t _la = 0;

#if __cplusplus > 201703L
    auto onExit = finally([=, this] {
#else
    auto onExit = finally([=] {
#endif
        exitRule();
    });
    try {
        setState(151);
        _errHandler->sync(this);
        switch (_input->LA(1)) {
            case SysYParser::T__12:
            case SysYParser::T__13:
            case SysYParser::Lparen:
            case SysYParser::Minus:
            case SysYParser::Addition:
            case SysYParser::Exclamation:
            case SysYParser::Multiplication:
            case SysYParser::IntLiteral:
            case SysYParser::FloatLiteral:
            case SysYParser::Identifier: {
                _localctx = _tracker.createInstance<SysYParser::ScalarConstInitValContext>(_localctx);
                enterOuterAlt(_localctx, 1);
                setState(138);
                constExp();
                break;
            }

            case SysYParser::Lbrace: {
                _localctx = _tracker.createInstance<SysYParser::ListConstInitValContext>(_localctx);
                enterOuterAlt(_localctx, 2);
                setState(139);
                match(SysYParser::Lbrace);
                setState(148);
                _errHandler->sync(this);

                _la = _input->LA(1);
                if ((((_la & ~0x3fULL) == 0) && ((1ULL << _la) & 1970583675887616) != 0)) {
                    setState(140);
                    constInitVal();
                    setState(145);
                    _errHandler->sync(this);
                    _la = _input->LA(1);
                    while (_la == SysYParser::Comma) {
                        setState(141);
                        match(SysYParser::Comma);
                        setState(142);
                        constInitVal();
                        setState(147);
                        _errHandler->sync(this);
                        _la = _input->LA(1);
                    }
                }
                setState(150);
                match(SysYParser::Rbrace);
                break;
            }

            default:
                throw NoViableAltException(this);
        }

    } catch (RecognitionException &e) {
        _errHandler->reportError(this, e);
        _localctx->exception = std::current_exception();
        _errHandler->recover(this, _localctx->exception);
    }

    return _localctx;
}

//----------------- VarDeclContext ------------------------------------------------------------------

SysYParser::VarDeclContext::VarDeclContext(ParserRuleContext *parent, size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

SysYParser::BTypeContext *SysYParser::VarDeclContext::bType() { return getRuleContext<SysYParser::BTypeContext>(0); }

std::vector<SysYParser::VarDefContext *> SysYParser::VarDeclContext::varDef() {
    return getRuleContexts<SysYParser::VarDefContext>();
}

SysYParser::VarDefContext *SysYParser::VarDeclContext::varDef(size_t i) {
    return getRuleContext<SysYParser::VarDefContext>(i);
}

tree::TerminalNode *SysYParser::VarDeclContext::Semicolon() { return getToken(SysYParser::Semicolon, 0); }

std::vector<tree::TerminalNode *> SysYParser::VarDeclContext::Comma() { return getTokens(SysYParser::Comma); }

tree::TerminalNode *SysYParser::VarDeclContext::Comma(size_t i) { return getToken(SysYParser::Comma, i); }

size_t SysYParser::VarDeclContext::getRuleIndex() const { return SysYParser::RuleVarDecl; }

std::any SysYParser::VarDeclContext::accept(tree::ParseTreeVisitor *visitor) {
    if (auto parserVisitor = dynamic_cast<SysYVisitor *>(visitor))
        return parserVisitor->visitVarDecl(this);
    else
        return visitor->visitChildren(this);
}

SysYParser::VarDeclContext *SysYParser::varDecl() {
    VarDeclContext *_localctx = _tracker.createInstance<VarDeclContext>(_ctx, getState());
    enterRule(_localctx, 16, SysYParser::RuleVarDecl);
    size_t _la = 0;

#if __cplusplus > 201703L
    auto onExit = finally([=, this] {
#else
    auto onExit = finally([=] {
#endif
        exitRule();
    });
    try {
        enterOuterAlt(_localctx, 1);
        setState(153);
        bType();
        setState(154);
        varDef();
        setState(159);
        _errHandler->sync(this);
        _la = _input->LA(1);
        while (_la == SysYParser::Comma) {
            setState(155);
            match(SysYParser::Comma);
            setState(156);
            varDef();
            setState(161);
            _errHandler->sync(this);
            _la = _input->LA(1);
        }
        setState(162);
        match(SysYParser::Semicolon);

    } catch (RecognitionException &e) {
        _errHandler->reportError(this, e);
        _localctx->exception = std::current_exception();
        _errHandler->recover(this, _localctx->exception);
    }

    return _localctx;
}

//----------------- VarDefContext ------------------------------------------------------------------

SysYParser::VarDefContext::VarDefContext(ParserRuleContext *parent, size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

size_t SysYParser::VarDefContext::getRuleIndex() const { return SysYParser::RuleVarDef; }

void SysYParser::VarDefContext::copyFrom(VarDefContext *ctx) { ParserRuleContext::copyFrom(ctx); }

//----------------- UninitVarDefContext ------------------------------------------------------------------

tree::TerminalNode *SysYParser::UninitVarDefContext::Identifier() { return getToken(SysYParser::Identifier, 0); }

std::vector<tree::TerminalNode *> SysYParser::UninitVarDefContext::Lbrkt() { return getTokens(SysYParser::Lbrkt); }

tree::TerminalNode *SysYParser::UninitVarDefContext::Lbrkt(size_t i) { return getToken(SysYParser::Lbrkt, i); }
